[package]
name = "sfn-vis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-cron-scheduler = "0.5.0"
anyhow = "1"
futures = "0.3.21"
shiplift = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_scan = "0.4.1"
strip-ansi-escapes = "0.1.1"
linked-hash-map = "0.5.4"
warp = "0.3.2"
static_dir = "0.2.0"